# pldi23-artifact

./: .gitignore  .gitmodules  Dockerfile  README.md
book/: 404.html  about.html  index.html  (+3 more)
src/benchmarks/flux/wave/: Cargo.toml
src/benchmarks/flux/wave/examples/cp/: cp.c
src/benchmarks/flux/wave/log/horn/: <rvec::RVec<T> as std::ops::Index<usize>>::index.lrc  <rvec::RVec<T> as std::ops::Index<usize>>::index.smt2  <rvec::RVec<T> as std::ops::IndexMut<usize>>::index_mut.lrc  iov::parse_iovs.lrc  iov::parse_iovs.smt2  path_resolution::expand_path.lrc  path_resolution::expand_path.smt2  path_resolution::expand_symlink.lrc  path_resolution::expand_symlink.smt2  path_resolution::resolve_path.lrc  path_resolution::resolve_path.smt2  path_resolution::to_pathbuf.lrc  path_resolution::to_pathbuf.smt2  runtime::<impl types::VmCtx>::copy_arg_buffer_to_sandbox.lrc  runtime::<impl types::VmCtx>::copy_arg_buffer_to_sandbox.smt2  runtime::<impl types::VmCtx>::copy_buf_from_sandbox.lrc  runtime::<impl types::VmCtx>::copy_buf_from_sandbox.smt2  runtime::<impl types::VmCtx>::copy_buf_to_sandbox.lrc  runtime::<impl types::VmCtx>::copy_buf_to_sandbox.smt2  runtime::<impl types::VmCtx>::copy_environ_buffer_to_sandbox.lrc  runtime::<impl types::VmCtx>::copy_environ_buffer_to_sandbox.smt2  (+24 more)
src/benchmarks/flux/wave/owned-components/: Cargo.toml
src/benchmarks/flux/wave/src/: iov.rs  lib.rs  path_resolution.rs  runtime.rs  rvec.rs  types.rs
src/benchmarks/prusti/wave/: Cargo.toml  Prusti.toml
src/benchmarks/prusti/wave/src/: iov.rs  lib.rs  path_resolution.rs  runtime.rs  types.rs
(+54 files in other folders)
