[package]
edition = "2021"
name = "flux-wave"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate_type = ["dylib", "rlib"]
name = "wave"


[dependencies]
owned-components = { path = "owned-components" }
prusti-contracts = { path = "/prusti-dev/prusti-contracts" }
# Uncomment this to verify outside the docker image
# prusti-contracts = { path = "../../../../prusti-dev/prusti-contracts" }

# [profile.dev]
# incremental = false
[features]
verify = []
